--- a/src/styles.css
+++ b/src/styles.css
@@ -14,17 +14,23 @@ header {
     color: white;
     padding: 25px;
     text-align: center;
+    box-shadow: 0px 5px 10px #cacbcb;
+}
+
+#page-title {
+    font-size: 30px;
 }
 
 .main {
     padding: 20px 40px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
 }
 
-#page-title {
-    font-size: 30px;
+.main-header {
+    display: flex;
+    gap: 15px;
 }
 
 #sub-title {
@@ -33,6 +39,7 @@ header {
 
 .content-container {
     display: flex;
+    gap: 30px;
 }
 
 .project {
@@ -44,6 +51,7 @@ header {
     flex-direction: column;
     justify-content: space-between;
     border-radius: 10px;
+    box-shadow: 0px 5px 10px #cacbcb;
 }
 
 .project-text {
@@ -66,15 +74,32 @@ header {
     background-color: #9AA6B2;
     border: none;
     border-radius: 6px;
-    width: 180px;
-    height: 35px;
     color: white;
     font-weight: 500;
     box-shadow: 0px 5px 10px #cacbcb;
     align-self: center;
+    width: 180px;
+    height: 35px;
 }
 
 button:active {
     transform: scale(0.98);
     box-shadow: none;
+}
+
+.new-project {
+    justify-content: center;
+}
+
+.new-project:hover {
+    background-color: #f7f7f7;
+}
+
+.new-project:active {
+    transform: scale(0.98);
+    box-shadow: none;
+}
+
+#add {
+    height: 70px;
 }
