--- a/src/styles.css
+++ b/src/styles.css
@@ -33,13 +33,23 @@ header {
     gap: 15px;
 }
 
+.back-button {
+    text-decoration: underline;
+    align-self: center;
+}
+
+.back-button:hover {
+    cursor: pointer;
+    color: #9AA6B2;
+}
+
 #sub-title {
     font-size: 22px;
 }
 
 .content-container {
     display: flex;
-    gap: 30px;
+    gap: 15px;
 }
 
 .project {
@@ -100,6 +110,79 @@ button:active {
     box-shadow: none;
 }
 
-#add {
+.project-add {
     height: 70px;
+}
+
+
+
+.task {
+    background-color: white;
+    width: 100%;
+    padding: 15px 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px #cacbcb;
+}
+
+.task-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.task-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.task-title {
+    font-size: 18px;
+    font-weight: bold;
+    align-self: center;
+}
+
+.task-duedate, .task-priority {
+    font-size: 14px;
+    font-weight: bold;
+
+}
+
+.task-description {
+    color: #747475;
+    font-size: 14px;
+}
+
+.task-buttons {
+    align-self: end;
+}
+
+.task-button {
+    background-color: #9AA6B2;
+    border: none;
+    border-radius: 6px;
+    color: white;
+    font-weight: 500;
+    box-shadow: 0px 5px 10px #cacbcb;
+    width: 70px;
+    height: 35px;
+}
+
+.new-task {
+    justify-content: center;
+    height: 70px;
+}
+
+.new-task:hover {
+    background-color: #f7f7f7;
+}
+
+.new-task:active {
+    transform: scale(0.98);
+    box-shadow: none;
+}
+
+.task-add {
+    height: 60px;
 }
