--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,10 @@
-* {
+*:not(dialog) {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+* { 
     font-family: ui-rounded, 'Hiragino Maru Gothic ProN', Quicksand, Comfortaa, Manjari, 'Arial Rounded MT', 'Arial Rounded MT Bold', Calibri, source-sans-pro, sans-serif;
 }
 
@@ -80,7 +83,7 @@ header {
     font-size: 14px;
 }
 
-.project-button {
+button {
     background-color: #9AA6B2;
     border: none;
     border-radius: 6px;
@@ -113,6 +116,42 @@ button:active {
 .project-add {
     height: 70px;
 }
+
+.dialogButton {
+    height: 25px;
+    width: 70px;
+}
+
+.dialogFlexContainer {
+    padding: 10px 80px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.dialogTitle {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#title { 
+    width: 100%;
+    height: 25px;
+    padding-left: 5px;
+}
+
+#desc-input {
+    width: 100%;
+    padding-left: 5px;
+    resize: none;
+}
+
+.dialogFooter {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+
 
 
 
