--- a/src/styles.css
+++ b/src/styles.css
@@ -75,6 +75,12 @@ header {
     font-size: 14px;
 }
 
+.project-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
 button {
     background-color: #9AA6B2;
     border: none;
@@ -83,7 +89,7 @@ button {
     font-weight: 500;
     box-shadow: 0px 5px 10px #cacbcb;
     align-self: center;
-    width: 180px;
+    width: 80px;
     height: 35px;
 }
 
